--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,12 @@
 /* CSS declarations go here */
+.messagedate {
+  color:gray;
+}
+
 body {
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-color: lightblue;
+  /*background-image: linear-gradient(to bottom, #315481, #918e82 100%);*/
   background-attachment: fixed;
  
   position: absolute;
@@ -21,12 +25,12 @@ body {
   max-width: 600px;
   margin: 0 auto;
   min-height: 100%;
-  background: white;
+  background: lightblue;
 }
  
 header {
-  background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
+  background: #ffffff;
+  /*background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);*/
   padding: 20px 15px 15px 15px;
   position: relative;
 }
@@ -49,17 +53,17 @@ form {
   position: relative;
 }
  
-.new-task input {
+.new-message input {
   box-sizing: border-box;
   padding: 10px 0;
-  background: transparent;
-  border: none;
+  background: white;
+  border: 1px;
   width: 100%;
   padding-right: 80px;
   font-size: 1em;
 }
  
-.new-task input:focus{
+.new-message input:focus{
   outline: 0;
 }
  
@@ -120,7 +124,7 @@ header .hide-completed {
     clear: both;
   }
  
-  .new-task input {
+  .new-message input {
     padding-bottom: 5px;
   }
 }
